adjust font configs

--- a/resume/my_resume.tex
+++ b/resume/my_resume.tex
@@ -32,13 +32,6 @@
 \datedsubsection{\textbf{广埠屯家里蹲大学~} 湖北，武汉}{2013.09 -- 2017.06}
 \textit{理学学士}，信息与计算科学，GPA：3.721~/~5，专业排名：1~/~43
 
-% programming sicp SICP The learning progress of sicp is partially 
-% distributed on github. say some code \verb|int c++ iam Monaco| 
-% and \textbf{some bold text} \textbf{\textit{some bold italic}} 
-% \texttt{typeset} \textsf{Martel Sans} see \textsf{some 
-% \textsc{Procedure} sans Procedure and \textit{sans font} and 
-% \textbf{bolded sans}} \underline{this is underlined}
-
 \section{\faUsers\ 工作经历}
 \datedsubsection{\textbf{互联网大厂} ~杭州}{2020.08 -- 至今}
 \role{XX工作室，XX岗位}{在职期间干了XX大事，做了XX贡献。}
@@ -92,12 +85,8 @@
   \item \datedline{国际会议志愿者}{2018.07}
   \item \datedline{概率论与数理统计本科生助教}{2017年秋}
   \item \datedline{校级三好学生}{2015.11}
-  \item \datedline{华中地区大学生数学建模邀请赛三等奖}{2015.05}
+  \item \datedline{大学生数学建模邀请赛三等奖}{2015.05}
   \item \datedline{国家励志奖学金}{2014, 2015}
 \end{itemize}
 
-%% Reference
-%\newpage
-%\bibliographystyle{IEEETran}
-%\bibliography{mycite}
 \end{document}
